--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     //wearApp project(':wear')
     compile 'com.google.android.gms:play-services-wearable:+'
     compile 'com.radiusnetworks:AndroidIBeaconLibrary:0.7.6@aar'
-    compile 'com.android.support:support-v4:19.1.+'
+    compile "com.android.support:support-v4:20.0.+"
     compile files('libs/multiscreen-android-1.1.11.jar')
-    compile files('/Users/a.dewan/Desktop/SmartHomeDemo/libs/multiscreen-android-1.1.11.jar')
+    //compile files('libs/multiscreen-android-1.1.11.jar')
 }
